Fix z-index

--- a/style.css
+++ b/style.css
@@ -125,4 +125,5 @@
   /* Start hidden */
   display: none;
 
+  z-index: 5;
 }
